2014-05-19  Karl Ratzsch  <kf2402@users.sf.net>

	* term/emf.trm: Add point types pentagon (14) and filled pentagon (15)

2014-05-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (load_linetype):  As documented, "set linetype cycle N"
	should only affect line properties (color, width, dash), not point
	properties (type, interval, size).  This got lost somewhere, which 
	meant point types > linetype_recycle_count were never used by default.
	Now they are.  This means that, as intended, 'with linespoints' cycles
	through (linetype_recycle_count * terminal's_max_point_type) distinct
	combinations before repeating so long as those two numbers are
	mutually prime.  Unfortunately that's not guaranteed and is terminal-
	dependent.  We really need a "set pointtype cycle M" command also so
	that you can choose M to be prime relative to N.
	Bugfix.

	* INSTALL docs/gnuplot.doc:  Update description of new features.

2014-05-15  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in PATCHLEVEL src/version.c docs/titlepag.tex:
	Bump version information to 5.0.rc1

	* demo/dashtypes.dem:  Avoid irrelevant warning message.

2014-05-14  Karl Ratzsch  <kf2402@users.sf.net>

	* term/svg.trm src/wxterminal/gp_cairo.c:
	Add point types pentagon (14) and filled pentagon (15)

	* src/qtterminal/QtGnuplotItems.cpp:
	(EAM) Add point types pentagon (14) and filled pentagon (15)

2014-05-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/tables.c src/tables.h: Remove undocumented routine
	test_time(). It was never updated to handle sub-second time precision,
	and in any case the functionality is now covered adequately by
	"print strptime()" and "print strftime()".

	* src/color.c (filled_polygon_3dcoords filled_polygon_zfixed)
	src/pm3d.c (filled_color_contour_plot):	 The option "set pm3d at C" is
	undocumented and doesn't work anyhow.  Wrap the corresponding code in
	#ifdef PM3D_CONTOURS . This disabled code may or may not be useful for